タイトルを更新する
#8

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="height: 100%; margin: 0; padding: 0; width: 100%">
   <head>
-    <title>Nostr Browser</title>
+    <title>Brostr</title>
   </head>
   <body
     style="
