画像に対応する
Closes #10

--- a/index.html
+++ b/index.html
@@ -85,6 +85,27 @@
           )
         );
 
+        await Promise.all(
+          [...iframe.contentWindow.document.querySelectorAll("img")].map(
+            async (img) => {
+              const nip19 = img.src;
+              const { id } = window.NostrTools.nip19.decode(
+                nip19.replace(/^nostr:/, "")
+              ).data;
+
+              const pool = new window.NostrTools.SimplePool();
+              const event = await pool.get(RELAYS, {
+                ids: [id],
+              });
+              await pool.close(RELAYS);
+
+              const typeTag = event.tags.find((tag) => tag[0] == "type");
+              typeTag &&
+                (img.src = `data:${typeTag[1]};base64,${event.content}`);
+            }
+          )
+        );
+
         iframe.srcdoc = new XMLSerializer().serializeToString(
           iframe.contentWindow.document
         );
