--- a/index.html
+++ b/index.html
@@ -38,52 +38,41 @@
         "wss://relay.nostr.bg",
       ];
 
+      const convertNip19ToDataUrl = async (
+        tagName,
+        attributeName,
+        mimeType
+      ) => {
+        await Promise.all(
+          [...iframe.contentWindow.document.querySelectorAll(tagName)].map(
+            async (el) => {
+              const nip19 = el[attributeName];
+              const { id } = window.NostrTools.nip19.decode(
+                nip19.replace(/^nostr:/, "")
+              ).data;
+
+              const pool = new window.NostrTools.SimplePool();
+              const event = await pool.get(RELAYS, {
+                ids: [id],
+              });
+              await pool.close(RELAYS);
+
+              el[attributeName] =
+                `data:${mimeType};base64,` +
+                btoa(unescape(encodeURIComponent(event.content)));
+            }
+          )
+        );
+      };
+
       const onload = async () => {
         iframe.contentWindow.document.querySelectorAll("a").forEach((a) => {
           a.href = a.href.replace(/^nostr:/, "");
         });
 
-        await Promise.all(
-          [...iframe.contentWindow.document.querySelectorAll("script")].map(
-            async (script) => {
-              const nip19 = script.src;
-              const { id } = window.NostrTools.nip19.decode(
-                nip19.replace(/^nostr:/, "")
-              ).data;
+        await convertNip19ToDataUrl("script", "src", "text/javascript");
 
-              const pool = new window.NostrTools.SimplePool();
-              const event = await pool.get(RELAYS, {
-                ids: [id],
-              });
-              await pool.close(RELAYS);
-
-              script.src =
-                "data:text/javascript;base64," +
-                btoa(unescape(encodeURIComponent(event.content)));
-            }
-          )
-        );
-
-        await Promise.all(
-          [...iframe.contentWindow.document.querySelectorAll("link")].map(
-            async (link) => {
-              const nip19 = link.href;
-              const { id } = window.NostrTools.nip19.decode(
-                nip19.replace(/^nostr:/, "")
-              ).data;
-
-              const pool = new window.NostrTools.SimplePool();
-              const event = await pool.get(RELAYS, {
-                ids: [id],
-              });
-              await pool.close(RELAYS);
-
-              link.href =
-                "data:text/css;base64," +
-                btoa(unescape(encodeURIComponent(event.content)));
-            }
-          )
-        );
+        await convertNip19ToDataUrl("link", "href", "text/css");
 
         await Promise.all(
           [...iframe.contentWindow.document.querySelectorAll("img")].map(
