--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html style="height: 100%; margin: 0; padding: 0; width: 100%">
   <head>
     <title>Brostr</title>
+     <style>
+      body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif;
+  margin: auto;
+  max-width: 38rem;
+  padding: 2rem;
+}
+
+iframe {
+  width: 100%;
+}
+     </style>
+      
   </head>
-  <body
-    style="
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      width: 100%;
-    "
-  >
+  <body>
     <div>
       <input
         id="nip19"
