--- a/src/index.html
+++ b/src/index.html
@@ -101,10 +101,6 @@
       };
 
       const onload = async () => {
-        iframe.contentWindow.document.querySelectorAll("a").forEach((a) => {
-          a.href = a.href.replace(/^nostr:/, "");
-        });
-
         const events = await fetchResourceEvents();
 
         convertNip19ToDataUrl("script", "src", "text/javascript", events);
@@ -128,12 +124,15 @@
           iframe.contentWindow.document
         );
         iframe.onload = () => {
-          iframe.onload = () => {
-            const path = iframe.contentWindow.location.pathname;
-            const nip19 = path.substring(path.lastIndexOf("/") + 1);
-            document.querySelector("#nip19").value = nip19;
-            (async () => await updateContent(nip19))();
-          };
+          iframe.contentWindow.document.querySelectorAll("a").forEach((a) => {
+            a.href.startsWith("nostr:") &&
+              a.addEventListener("click", (event) => {
+                const nip19 = a.href.replace(/^nostr:/, "");
+                document.querySelector("#nip19").value = nip19;
+                (async () => await updateContent(nip19))();
+                event.preventDefault();
+              });
+          });
         };
       };
 
