URI フィールドの幅を画面に合わせる
Closes #21

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       width: 100%;
     "
   >
-    <div>
-      <button id="back" onclick="handleBackClick()" disabled="true">
-        Back
-      </button>
+    <div style="display: flex">
+      <button id="back" onclick="handleBackClick()" disabled="true">Back</button
+      >&nbsp;
       <button id="forward" onclick="handleForwardClick()" disabled="true">
-        Forward
-      </button>
+        Forward</button
+      >&nbsp;
       <input
         id="nip19"
         type="text"
         size="50"
         value="nevent1qqsd2svzwvnmtrquga3a08tntr7lp6w4me755z8ym284jtm7xf9wf9gc8ywjf"
-      />
+        style="width: 100%"
+      />&nbsp;
       <button onclick="handleClick()">Go</button>
     </div>
     <iframe id="iframe" style="flex-grow: 1; margin: 0; padding: 0"></iframe>
