--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/images/favicon-16x16.png"
+      href="favicon-16x16.png"
     />
     <link rel="manifest" href="images/site.webmanifest" />
     <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5" />
