RELAYS の名前を変更する

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 
     <script src="https://unpkg.com/nostr-tools/lib/nostr.bundle.js"></script>
     <script>
-      const RELAYS = [
+      const relays = [
         "wss://nos.lol",
         "wss://nostr.bitcoiner.social",
         "wss://nostr.mom",
