--- a/src/index.html
+++ b/src/index.html
@@ -55,13 +55,13 @@
     <script>
       const RELAYS = [
         "wss://nos.lol",
-        "wss://nostr-pub.wellorder.net",
         "wss://nostr.bitcoiner.social",
         "wss://nostr.mom",
-        "wss://nostr.oxtr.dev",
         "wss://relay-jp.nostr.wirednet.jp",
         "wss://relay.damus.io",
         "wss://relay.nostr.bg",
+        "wss://relay.nostr.band",
+        "wss://r.hostr.cc",
       ];
 
       const convertNip19ToDataUrl = (
