--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,11 @@
       href="../images/favicon-16x16.png"
     />
     <link rel="manifest" href="../images/site.webmanifest" />
-    <link rel="mask-icon" href="../images/safari-pinned-tab.svg" color="#5bbad5" />
+    <link
+      rel="mask-icon"
+      href="../images/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <title>Brostr</title>
