NIP-94 に対応する
Closes #22

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,10 @@
           const event = events[nip19];
 
           const typeTag = event?.tags.find((tag) => tag[0] == "type");
-          typeTag && (img.src = `data:${typeTag[1]};base64,${event.content}`);
+          event?.kind == 1063
+            ? (img.src = event?.tags.find((tag) => tag[0] == "url")[1])
+            : typeTag &&
+              (img.src = `data:${typeTag[1]};base64,${event.content}`);
         });
 
         iframe.srcdoc = new XMLSerializer().serializeToString(
