kind 30036 のアンラップを関数に抽出する

--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,16 @@
             );
       };
 
+      const unwrapKind30036 = (event) => {
+        const kind =
+          event.kind == 30036 ? parseInt(findTag(event, "k")[1]) : event.kind;
+        const content =
+          event.kind == 30036
+            ? JSON.parse(event.content).content
+            : event.content;
+        return { kind, content };
+      };
+
       const updateContent = async (uri) => {
         back.disabled = historyIndex <= 0;
         forward.disabled = historyIndex >= history.length - 1;
@@ -166,12 +176,7 @@
         const pool = new window.NostrTools.SimplePool();
         const event = await pool.get(relays, filter);
 
-        const kind =
-          event.kind == 30036 ? parseInt(findTag(event, "k")[1]) : event.kind;
-        const content =
-          event.kind == 30036
-            ? JSON.parse(event.content).content
-            : event.content;
+        const { kind, content } = unwrapKind30036(event);
 
         iframe.srcdoc =
           kind == 5392 || kind == 35392
